--- a/public/styles.css
+++ b/public/styles.css
@@ -12,7 +12,7 @@
 
 .footer {
 	height: 607px;
-	width: 1920px;
+	width: 100%;
 	background: #000;
 	color: white;
 	font-family: 'Source Sans Pro', sans-serif;
